# site-checker

./: Makefile  README.md  manage.py  pyproject.toml  setup.cfg
site_checker/: admin.py  asgi.py  celery.py  forms.py  middleware.py  mixins.py  models.py  settings.py  test_runner.py  tests.py  urls.py  views.py  wsgi.py
site_checker/fixtures/: database.json  test_data.json
site_checker/migrations/: 0001_initial.py  0002_rename_actual_text_check_has_expected_text_and_more.py  0003_alter_check_has_expected_text_and_more.py  0004_alter_check_url_name.py  0005_remove_url_last_check_details_and_more.py  0006_rename_failed_check_details_url_check_details.py  0007_alter_check_actual_response_by_http_and_more.py  0008_lastparse.py  0009_textcheckdata.py  0010_notification.py  0011_check_has_expected_description_and_more.py
site_checker/modules/: parser.py
site_checker/templates/: base.html  check_text.html  checks_list.html  create_url.html  create_urls.html  delete_url.html  index.html  parse_urls.html  parse_urls_list.html  text_check_list.html  update_url.html  urls_list.html
