[tool.poetry]
name = "site-checker"
version = "0.1.0"
description = ""
authors = ["Labidahrom <labidahrom@yandex.ru>"]
readme = "README.md"
packages = [{include = "site_checker"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.2"
gunicorn = "^20.1.0"
django-bootstrap = "^0.2.4"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
