[tool.poetry]
name = "site-checker"
version = "0.1.0"
description = ""
authors = ["Labidahrom <labidahrom@yandex.ru>"]
readme = "README.md"
packages = [{include = "site_checker"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.2"
gunicorn = "^20.1.0"
django-bootstrap = "^0.2.4"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"
chardet = "^5.1.0"
aiohttp = "^3.8.5"
celery = "^5.3.1"
redis = "^4.6.0"
psycopg = "^3.1.9"
dj-database-url = "^2.0.0"
whitenoise = "^6.5.0"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
